@@ -1,16 +1,17 @@
 package com.google.cloud.hadoop.fs.gcs.contract;
 
+import static org.apache.hadoop.fs.contract.ContractTestUtils.assertFileHasLength;
+import static org.apache.hadoop.fs.contract.ContractTestUtils.createFile;
+import static org.apache.hadoop.fs.contract.ContractTestUtils.dataset;
+
 import com.google.cloud.hadoop.gcsio.GoogleCloudStorage;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.fs.contract.AbstractContractConcatTest;
 import org.apache.hadoop.fs.contract.ContractTestUtils;
 import org.junit.Test;
 
-import static org.apache.hadoop.fs.contract.ContractTestUtils.assertFileHasLength;
-import static org.apache.hadoop.fs.contract.ContractTestUtils.createFile;
-import static org.apache.hadoop.fs.contract.ContractTestUtils.dataset;
-
 public abstract class AbstractGoogleContractConcatTest extends AbstractContractConcatTest {
+
   @Test
   public void testConcatMultiple() throws Throwable {
     int numFiles = GoogleCloudStorage.MAX_COMPOSE_OBJECTS * 3 / 2;
@@ -30,7 +31,6 @@ public abstract class AbstractGoogleContractConcatTest extends AbstractContractC
     getFileSystem().concat(target, srcs);
     assertFileHasLength(getFileSystem(), target, TEST_FILE_LEN * numFiles);
     ContractTestUtils.validateFileContent(
-        ContractTestUtils.readDataset(getFileSystem(),
-            target, TEST_FILE_LEN * numFiles), blocks);
+        ContractTestUtils.readDataset(getFileSystem(), target, TEST_FILE_LEN * numFiles), blocks);
   }
 }
