@@ -1,5 +1,7 @@
 1.9.14 - 2019-XX-XX
 
+  1. Implement Hadoop FileSystem `concat` method using GCS compose API.
+
 
 1.9.13 - 2019-02-04
 
